--- a/package.json
+++ b/package.json
@@ -7,13 +7,23 @@
   "readme": "https://github.com/bengrunfeld/flux-react-todos/README.md",
   "license": "Apache 2",
   "devDependencies": {
-    "gulp": "^3.8.11",
-    "gulp-browserify": "^0.5.0",
-    "gulp-concat": "^2.2.0",
-    "react": "^0.12.2",
-    "reactify": "^0.13.1",
+    "browserify": "^11.1.0",
     "es6-promise": "^1.0.0",
     "flux": "^2.0.1",
-    "object-assign": "^1.0.0"
+    "gulp": "^3.8.11",
+    "gulp-clean-dest": "^0.1.0",
+    "gulp-concat": "^2.2.0",
+    "object-assign": "^1.0.0",
+    "react": "^0.13.3",
+    "reactify": "^1.1.1",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0"
+  },
+  "dependencies": {
+    "del": "^2.0.2",
+    "express": "^4.13.3",
+    "history": "^1.9.0",
+    "path": "^0.12.7",
+    "react-router": "^1.0.0-rc1"
   }
 }
